# Bordukova_A

Bordukova_A_A/: CmakeLists.txt
Bordukova_A_A/With Qt/: CMakeLists.txt  administrator_choose.cpp  autorization.cpp  connect_data_base.cpp  mainwindow.cpp  trainers_choose.cpp  users_choose.cpp
Bordukova_A_A/With Qt/rtf/: refman.rtf  ~$refman.rtf
Bordukova_A_A/Without Qt/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
Bordukova_A_A/Without Qt/.cmake/api/v1/reply/: cache-v2-2db04de5195155516d01.json  cmakeFiles-v1-46213c582221abab3a22.json  codemodel-v2-783c87126f72d17366d3.json  directory-.-Release-f95745d12a80220c25a5.json  index-2023-01-12T11-19-02-0552.json  target-vgb-Release-7f9b6a30bf5d5bf89792.json  target-vgb_autogen-Release-7c0fc4b407cb831b53f7.json
Bordukova_A_A/Without Qt/.qt/: QtDeploySupport.cmake
Bordukova_A_A/Without Qt/.qtc_clangd/: compile_commands.json
Bordukova_A_A/Without Qt/.qtc_clangd/.cache/clangd/index/: QAbstractItemModel.91A0F3DC1EAFCB16.idx  QProcessEnvironment.583123E43717254E.idx  QSql.60EF13B6824167A6.idx  QSqlDatabase.FA5B7B912810C29C.idx  QSqlError.AEB0BE052FC53AF6.idx  QWidget.9A6B107D634E087B.idx  administrator_choose.cpp.ED7B84BF9C181BEA.idx  administrator_choose.h.E0F4CC8A09BDF8F4.idx  autorization.cpp.374DC10C0866344C.idx  autorization.h.FFD732E550314702.idx  connect_data_base.cpp.6977D33C7445CD07.idx  connect_data_base.h.740445501A638808.idx  dinamic_items.cpp.094B76D040E740DA.idx  dinamic_items.h.4318AE786CB5DD4F.idx  dynamic_combobox.cpp.67AB48B3334D613F.idx  dynamic_combobox.h.41A1A2A717E4AF0E.idx  dynamic_item.cpp.1E2320203B41D325.idx  dynamic_item.h.73ED196281875EE3.idx  dynamic_layout.cpp.EE9533098BCA548C.idx  dynamic_layout.h.E09004728785011F.idx  main.cpp.1C250C5BFD24BC85.idx  mainwindow.cpp.D199508CB05D56F2.idx  mainwindow.h.85030874A56F08B3.idx  qabstractitemmodel.h.408AE5D116AF2F6E.idx  qcache.h.AB46C7E8DA278C4C.idx  qcborstreamreader.h.AA6F30F9F8845AFA.idx  qchar.h.C687F541B4708B7B.idx  qcombobox.h.E774E9CC0D5FC900.idx  qcoreapplication.h.DC6B1CBE1204D37B.idx  qdialog.h.F2DACF92E7230D76.idx  qflags.h.EC8B2D0A054C0C29.idx  qfuture.h.E9DBC81B5FFD5D04.idx  qfuture_impl.h.D4EB7B5F0751EFD3.idx  qfutureinterface.h.3397AE214F992012.idx  qglobal.h.67B62A527F12FC10.idx  qlabel.h.A037C5F78F056DE1.idx  qlineedit.h.5DE6123D0E835058.idx  qlist.h.11918775FD9FAC9C.idx  qmessagebox.h.63AD0647DE493DA1.idx  qmetatype.h.A3C004434F019678.idx  (+23 more)
Bordukova_A_A/Without Qt/vgb_autogen/: mocs_compilation.cpp
Bordukova_A_A/Without Qt/vgb_autogen/EWIEGA46WW/: moc_administrator_choose.cpp  moc_administrator_choose.cpp.d  moc_autorization.cpp  moc_autorization.cpp.d  moc_connect_data_base.cpp  moc_connect_data_base.cpp.d  moc_dinamic_items.cpp  moc_dinamic_items.cpp.d  moc_dynamic_combobox.cpp  moc_dynamic_combobox.cpp.d  moc_dynamic_item.cpp  moc_dynamic_item.cpp.d  moc_dynamic_layout.cpp  moc_dynamic_layout.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_trainers_choose.cpp  moc_trainers_choose.cpp.d  moc_users_choose.cpp  moc_users_choose.cpp.d
Bordukova_A_A/Without Qt/vgb_autogen/include/: ui_administrator_choose.h  ui_autorization.h  ui_mainwindow.h  ui_trainers_choose.h  ui_users_choose.h
Bordukova_A_A/prj.lab/: CmakeLists.txt
Bordukova_A_A/prj.lab/QueueP/: CmakeLists.txt  QueueP.cpp  QueueP.h  QueueP_test.cpp
Bordukova_A_A/prj.lab/QueueR/: CmakeLists.txt  QueueR.cpp  QueueR.h  QueueR_test.cpp
Bordukova_A_A/prj.lab/priority_queue/: CMakeLists.txt  priority_queue.h  test.cpp
